Got GET POST AND DELETE working so far all I have left is PUT
